# sciml

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 1. Introduction.md  1.1. How to install.md  2.1. Core.md  README.md
sciml/: __init__.py
sciml/callbacks/: __init__.py  checkpoint.py  logger.py
sciml/core/: __init__.py  callback.py  context.py  contracts.py  evaluation.py  loss.py  metric.py  model.py  objective.py  sampler.py  strategy.py  trainer.py  validation.py
sciml/losses/: __init__.py  residual.py  supervised.py
sciml/metrics/: __init__.py  lp_norm.py  max_error.py  mean_absolute_error.py  mean_relative_absolute_error.py  mean_squared_error.py  relative_lp_norm.py  root_mean_squared_error.py
sciml/samplers/: __init__.py  latin_hypercube.py  scaler.py
sciml/strategies/: __init__.py  strategy.py
sciml/trainers/: __init__.py  staged.py  standard.py  trainer.py
sciml/utils/: __init__.py  autograd.py  checker.py  initialization.py  posproc.py  serialization.py  validation.py
tests/callbacks/: checkpoint_test.py  logger_test.py
tests/losses/: residual_test.py  supervised_test.py
tests/metrics/: lp_norm_test.py  max_error_test.py  mean_absolute_error_test.py  mean_squared_error_test.py  relative_lp_norm_test.py  root_mean_squared_error_test.py
tests/samplers/: latin_hypercube_test.py  scaler_test.py
tests/strategies/: strategy_test.py
tests/trainers/: standard_test.py  trainer_test.py
tests/utils/: autograd_test.py  (+5 more)
tutorials/: advection-diffusion.ipynb  advection_diffusion [STAGED].ipynb  advection_diffusion [STANDARD].ipynb
(+6 files in other folders)
