# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciml"
version = "0.1.0"
description = "Framework for building Physics-Informed Neural Networks (PINNs) in Python."
authors = [{ name="Lucas Ribeiro Alves", email="lucas.ra.mast@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.4.0",
    "numpy>=2.0",
    "scipy>=1.13.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
homepage = "https://github.com/LABOSS-UFMG/sciml"
repository = "https://github.com/LABOSS-UFMG/sciml"
issues = "https://github.com/LABOSS-UFMG/sciml/issues"

[tool.setuptools.packages.find]
where = [""]

[tool.pytest.ini_options]
pythonpath = [""]